<resources>
    <string name="app_name">WatchfulSky</string>
    <string name="btn_go">Heliocentric</string>
    <string name="error_installing_orekit_default_data">Installation of the default Orekit data failed.</string>
    <string name="error_installing_orekit_default_data_external_storage_not_accessible">Installation of the default Orekit data failed due to external storage not accessible.</string>
    <string name="error_initializing_orekit">Error initializing simulator, is the needed data installed correctly?</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_ignore">Ignore</string>
    <string name="title_activity_satellite_sel">WatchfulSky</string>
    <string name="title_satellites">Satellites</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_activity_maps">Map</string>
    <string name="satellite_name"></string>
    <string name="venus">Venus</string>
    <string name="saturn">Saturn</string>
    <string name="earth">Earth</string>
    <string name="uranus">Uranus</string>
    <string name="mars">Mars</string>
    <string name="neptune">Neptune</string>
    <string name="name">Name</string>
    <string name="distance_from_sun">Distance from Sun</string>
    <string name="velocity">Velocity</string>
    <string name="back">back</string>


</resources>
