<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navbar"
    tools:context="ca.mun.engi5895.watchfulsky.Activities.HeliocentricActivity">

    <ca.mun.engi5895.watchfulsky.AndroidAestheticAdditions.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ap="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </ca.mun.engi5895.watchfulsky.AndroidAestheticAdditions.SquareLayout>

    <RelativeLayout
        android:id="@+id/topButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/planetButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonMercury"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickMercury"
                    android:text="Mercury" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonJupiter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickJupiter"
                    android:text="Jupiter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonVenus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickVenus"
                    android:text="@string/venus" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonSaturn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickSaturn"
                    android:text="@string/saturn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonEarth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickEarth"
                    android:text="@string/earth" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonUranus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickUranus"
                    android:text="@string/uranus" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonMars"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickMars"
                    android:text="@string/mars" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonNeptune"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/buttonCust"
                    android:textColor="@color/buttonText"
                    android:onClick="clickNeptune"
                    android:text="@string/neptune" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/PlanetInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PlanetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/name" />

            <TextView
                android:id="@+id/PlanetPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PlanetName"
                android:text="@string/distance_from_sun" />

            <TextView
                android:id="@+id/PlanetPositionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PlanetName"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/PlanetVelocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PlanetPosition"
                android:text="@string/velocity" />

            <TextView
                android:id="@+id/PlanetVelocityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/PlanetPositionValue"
                android:layout_alignParentEnd="true" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/earth_icon"
                android:backgroundTint="@color/buttonCust"
                android:textColor="@color/buttonText"
                android:onClick="clickBack"
                android:text="@string/back"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/earth_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/mercury_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/venus_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/mars_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/jupiter_icon"
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/saturn_icon"
                android:layout_width="145dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/uranus_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/neptune_icon"
                android:layout_width="73dp"
                android:layout_height="65dp"
                android:layout_below="@+id/PlanetName"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toBottomOf="@+id/PlanetName"
                app:layout_constraintVertical_bias="1.0" />


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>


